# PYTANK

./: README.md  __init__.py  processor.py  pyproject.toml  setup.py
PYTANk/: __init__.py  pyproject.toml
PYTANk/graphs/: __init__.py
PYTANk/material_balance/: __init__.py
PYTANk/pytank/: Dataframe_press_avg.py  README.md  mbal_Dataframe2.csv  metodo_cartertracy.py  press_avg.csv  pvt_table.py  setup.py
PYTANk/tests/: conftest.py  test_pvt_table.py
PYTANk/utilities/: Aquifer.py  metodo_analitico.py  pvt_correlations.py
aquifers/: influx_of_water.py
data_processing/: processor.py
explorer/: explore_data_analysis.py
fluid/: fluid.py
functions/: Dataframe_press_avg.py  eda.py  mbal_Dataframe.csv  mbal_Dataframe.py  mbal_Dataframe2.csv  mbal_tanks.csv  metodo_cartertracy.py  pruebablance.py  pvt_table.py
new/: PRUEBA.py  constants.py  fluid.py  get_press_avg.py  get_wells.py  get_wels_prueba.py  mat_bal_implementation.py  quick_test_vector_data.py  tank.py  utilities.py  uw.py  vector_data.py  well.py
old/aquifers/: influx_of_water.py
old/daraframes/: Dataframe_press_avg.py  eda.py  mbal_Dataframe.py  press_avg.csv
old/data_processing/: processor.py
old/dataframes/: Dataframe_press_avg.py  eda.py  mbal_Dataframe.py  press_avg.csv  production.csv  (+2 more)
optional/: optional_functions.py
pytank/: POES.py  __init__.py
tank/: tank.py
tests/: test1.py  test_aquifers_.py  test_explore_data.py  test_for_functions.py  test_material_balance.py  test_material_balance2.py  test_pvt_table.py
utilities/: influx_of_water.py  pvt_interp.py
well/: well.py
(+81 files in other folders)
